--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "canvas": "^3.1.0",
     "discord.js": "^14.19.1",
     "dotenv": "^16.5.0",
+    "fuse.js": "^7.1.0",
     "jimp": "^1.6.0",
     "moment": "^2.30.1",
     "sqlite3": "^5.1.7"
